# hyzu

./: .gitignore  CMakeLists.txt  README.md  hyzu-visual.sln  main.cpp
GLFW/include/GLFW/: glfw3.h
camera/: Camera.cpp  Camera.h
hyzu-visual/: SampleWindow.h  Scene.h  Skybox.h  hyzu-visual.vcxproj  hyzu-visual.vcxproj.filters  imgui.ini  main.cpp
hyzu-visual/camera/: Camera.cpp  Camera.h
hyzu-visual/files/scenes/: Bath.json  Pool.json
hyzu-visual/gui/: GUIManager.cpp  GUIManager.h
hyzu-visual/includes/assimp/lib/: assimp-vc143-mtd.exp  assimp.lib
hyzu-visual/includes/json/lib/: jsoncpp.exp  jsoncpp.lib
hyzu-visual/includes/soil/lib/: soil.lib
hyzu-visual/input/: InputManager.cpp  InputManager.h
hyzu-visual/lighting/: LightSources.h
hyzu-visual/render/: ImportedModel.cpp  ImportedModel.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderableObject.h  RenderableWithVertexColor.cpp  RenderableWithVertexColor.h  Scene.cpp  SimpleMesh.cpp  SimpleMesh.h  Skybox.cpp  Skybox.h
hyzu-visual/resources/models/: sphere.mtl
hyzu-visual/resources/scenes/pool/: base.mtl  pool4.mtl  sphere.mtl
hyzu-visual/resources/scenes/pool/water/: poolwater.mtl
hyzu-visual/resources/scenes/room/4/: bath.mtl
hyzu-visual/resources/scenes/room/4/bath/: scene.gltf
hyzu-visual/resources/scenes/soap/: scene.gltf
hyzu-visual/shaders/: BaseFS.glsl  EnvFS.glsl  LighDepthVS.glsl  LightDepthFS.glsl  PostFS.glsl  PostVS.glsl  ShaderManager.cpp  ShaderManager.h  SkyFS.glsl  VolumetricFS.glsl  VolumetricVS.glsl
hyzu-visual/window/: SampleWindow.cpp  SampleWindow.h  VolumetricWindow.cpp  VolumetricWindow.h
import/: AssimpImport.cpp  AssimpImport.h
input/: InputManager.cpp  InputManager.h
libs/GLEW/doc/: advanced.html  build.html  install.html
libs/GLFW/include/GLFW/: glfw3.h
render/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderableObject.cpp  RenderableObject.h  RenderableWithVertexColor.cpp  RenderableWithVertexColor.h  SimpleMesh.cpp  SimpleMesh.h
resources/models/cake/source/: cake.mtl
resources/models/crate/: crate.fbx
resources/models/crystal/source/: crystal.mtl
resources/models/toast/source/: eggtoastplease.fbx  toast.mtl
resources/scenes/boulder/: boulder.mtl
resources/scenes/cathedral/: cathedralob.mtl
resources/scenes/pool/: Pool2.fbx  pool.mtl  pool3.mtl
shaders/: BaseFS.glsl  BaseVS.glsl  DepthVS.glsl  EnvFS.glsl  EnvVS.glsl  PostFS.glsl  PostVS.glsl  ShaderManager.cpp  ShaderManager.h  SkyVS.glsl  VolumetricFS.glsl  VolumetricVS.glsl
window/: SampleWindow.cpp  SampleWindow.h
